# P2C-CCD

./: .gitignore  LICENSE  README.md  _config.yml  environment.yml  index.html
src/: CMakeLists.txt  README.md  pyproject.toml
src/baseline/: README.md  download_ccd_datasets.ps1  download_remaining_ccd_datasets.sh
src/benchmark/: README.md  car_wall_impact_dense_wall_patch_rtstpf_training_benchmark_run_id.json  particle_sphere_bowl_explosion_run_id.json
src/benchmark/all_dataset_strict_five_path_full_replay_run_id/: abc_cad.json  all_dataset_strict_five_path_full_replay_run_id.csv  all_dataset_strict_five_path_full_replay_run_id.json  all_dataset_strict_five_path_full_replay_run_id.md  common_daily_physics_collision_cases_run_id.json  common_modeling_high_density_scenarios_large.json  fusion360_gallery_assembly_full.json  fusion_360_gallery_assembly.json  high_density_mesh_multi_source.json  rtstpf_advantage_cases_v4_large_training.json  shapenet_car_wall_dense_wall_patch.json  shapenetcore_ood_dense_high_speed_thin_feature.json  t0_synthetic_proxy.json  thingi10k.json  trained_stpf_high_density.json
src/benchmark/native_end_to_end_dense_run_id/: native_end_to_end_dense_run_id.json
src/benchmark/native_full_scene_ccd_replay_walltime_run_id/: native_full_scene_ccd_replay_walltime_run_id_summary.csv
src/benchmark/native_ti_four_source_anyhit_dense_group_run_id/: native_ti_four_source_anyhit_dense_group_run_id_three_method.json
src/benchmark/native_ti_four_source_mixed_dense_group_run_id/: native_ti_four_source_mixed_dense_group_run_id_three_method.json
src/benchmark/native_ti_heldout_dense_group_hardmix_run_id/: native_ti_heldout_dense_group_hardmix_run_id.json
src/benchmark/native_ti_heldout_dense_group_run_id/: group_heldout_HeuristicExtentLow_three_method.csv  group_heldout_HeuristicExtentLow_three_method.json  group_heldout_HeuristicExtentLow_three_method.md  group_heldout_HeuristicFeatureEnergy_three_method.csv  group_heldout_HeuristicFeatureEnergy_three_method.json  group_heldout_HeuristicFeatureEnergy_three_method.md  group_heldout_HeuristicMotionHigh_three_method.csv  group_heldout_HeuristicMotionHigh_three_method.json  group_heldout_HeuristicMotionHigh_three_method.md  group_heldout_HeuristicSmallGap_three_method.csv  group_heldout_HeuristicSmallGap_three_method.json  group_heldout_HeuristicSmallGap_three_method.md  group_heldout_SingleHeuristicProximity_three_method.csv  group_heldout_SingleHeuristicProximity_three_method.json  group_heldout_SingleHeuristicProximity_three_method.md  group_heldout_learned_random_three_method.csv  group_heldout_learned_random_three_method.json  group_heldout_learned_random_three_method.md  heldout_native_ti_mixed_run_id.csv  heldout_native_ti_mixed_run_id.json  heldout_native_ti_mixed_run_id.md  native_ti_heldout_dense_group_run_id.json  native_ti_heldout_dense_group_run_id.md  source_heldout_shapenetcore_HeuristicExtentLow_three_method.csv  source_heldout_shapenetcore_HeuristicExtentLow_three_method.json  source_heldout_shapenetcore_HeuristicExtentLow_three_method.md  source_heldout_shapenetcore_HeuristicFeatureEnergy_three_method.csv  (+14 more)
src/configs/: default_runtime.json
src/cpp/: CMakeLists.txt
src/datasets/: README.md  README_upstream_adapters.md
src/docs/: abc_mesh_exact_benchmark.md  abc_mesh_exact_paper_benchmark.md  abc_paper_benchmark.md  abc_training.md  adapter_contracts.md  architecture.md  benchmark_data_manifest.md  benchmark_export_v2.md  benchmark_result_template.md  benchmark_suites.md  benchmark_suites_and_profiling.md  benchmarks_and_baselines.md  bindings_and_integration.md  bvh_exact_baseline.md  cad_and_rigid_scene_adapters.md  codebase_scan.md  complete_example_query_scale_design.md  curobo_downstream.md  data_generation.md  dataset_strategy_train_vs_benchmark.md  developer_setup.md  exact_certificate_engine.md  failure_triage_checklist.md  gpu_optix_environment.md  learned_style_comparison.md  milestone_execution_checklist.md  model_artifacts_manifest.json  model_artifacts_manifest.md  native_scene_object_motion_trap_envelope.md  near_term_execution_gate.md  no_proposal_ablation.md  no_queue_decouple_microbenchmark.md  paper_case_reproduction.md  patch_granularity_ablation.md  patch_granularity_tuning.md  post_impact_response.md  proposal_queue_stpf.md  proposal_training_and_visualization.md  pure_exact_cpu_baseline.md  python_wrappers_and_benchmark_runner.md  (+18 more)
src/tests/: README.md  quality_gates.json
src/tools/: aris_ccf_a_experiment_suite.py  aris_complete_remaining_prompt_tasks.py  aris_continuation_pass_run_id.py  build_rtstpf_advantage_case_demos.py  build_rtstpf_dense_advantage_demo.py  build_tight_inclusion_dense_group_schedules.py  convert_scalable_ccd_sample_to_p2c_groups.py  exact_root_parity_query_smoke.cpp  full_scene_ccd_replay_benchmark.cpp  generate_car_wall_analysis_curves.py  generate_car_wall_brick_spatial_curves.py  generate_car_wall_detection_scatter.py  generate_comprehensive_benchmark_report.py  generate_scene_object_envelope_motion_trap_dataset.py  generate_standard_model_displacement_curves.py  geometry_proxy_viewer.cpp  hard_negative_near_miss_dense_case.py  lighten_abc_surface_contact_assets.py  native_ti_four_source_dense_group_benchmark.py  native_ti_heldout_dense_group_benchmark.py  object_object_dense_mesh_contact_case.py  particle_sphere_bowl_explosion_case.py  patch_granularity_tuner.cpp  proposal_queue_viewer.cpp  render_abc_surface_contact_hq_video.py  render_aris_real_mesh_physics_cases.py  render_fig18_abc_clean_video.py  render_n_body_full_faces_mp4.py  render_recent_dense_case_videos.py  render_repeated_cases_blender_material_run_id.py  render_selected_real_ti_physical_collision_scene.py  repeated_contact_case_suite_run_id.py  repeated_footstep_snow_case_run_id.py  repeated_rifle_assembly_case_run_id.py  run_all_dataset_strict_five_path_replay.py  run_baseline_coverage_matrix.ps1  run_ccd_wrapper_normalized_benchmark.py  run_learned_vs_random_ablation.ps1  run_n_body_full_faces_background.ps1  run_native_dense_group_walltime.ps1  (+21 more)
(+536 files in other folders)
