[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2cccd"
version = "0.1.0"
description = "Proposal-to-Certificate CCD research prototype skeleton."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
addopts = "--basetemp=../.pytest_tmp"
